commented out maps for now

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <li><a href="/task.html"><code>&lt;task&gt;</code></a></li>
                         <!-- <li><a href="/concept.html"><code>&lt;concept&gt;</code></a></li>
                         <li><a href="/reference.html"><code>&lt;reference&gt;</code></a></li> -->
-                        <li><a href="/maps.html"><code>&lt;map&gt;</code></a></li> -->
+                        <!-- <li><a href="/maps.html"><code>&lt;map&gt;</code></a></li> --> -->
                       </ul>
                     </nav>
                     <p>
