added scorecard link to last slide

--- a/task.html
+++ b/task.html
@@ -303,7 +303,7 @@
                             DITA 1.3 spec on the <a href="https://docs.oasis-open.org/dita/dita/v1.3/errata02/os/complete/part3-all-inclusive/langRef/containers/task-elements.html#task2" target="_blank" rel="noopenner noreferrer">task</a> element
                           </li>
                           <li>
-                            Best practice guidelines (Bellamy <span style="font-style:italic;">et al</span>., pp. 39-40).
+                            Best practice guidelines (Bellamy <span style="font-style:italic;">et al</span>., pp. 39-40), which I have translated as a <a href="https://docs.google.com/spreadsheets/d/12TKr8tlwgIko_da5D8JlzE4-abD7mPwouKrONwj9EmQ/edit?usp=sharing" target="_blank" rel="noreferrer noopenner">scorecard in Google Sheets</a>.
                           </li>
                       </ul>
                     </section>
