--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
                     </h1>
                     <nav>
                       <ul>
-                        <li><a href="/task.html"><code>&lt;task&gt;</code></a></li>
-                        <!-- <li><a href="/concept.html"><code>&lt;concept&gt;</code></a></li>
-                        <li><a href="/reference.html"><code>&lt;reference&gt;</code></a></li> -->
-                        <!-- <li><a href="/maps.html"><code>&lt;map&gt;</code></a></li> -->
+                        <li><a href="task.html"><code>&lt;task&gt;</code></a></li>
+                        <!-- <li><a href="concept.html"><code>&lt;concept&gt;</code></a></li>
+                        <li><a href="reference.html"><code>&lt;reference&gt;</code></a></li> -->
+                        <!-- <li><a href="maps.html"><code>&lt;map&gt;</code></a></li> -->
                       </ul>
                     </nav>
                 </section>
